Git_WGBH_QC/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Alternate_Inventory_Balance__c</fullName>
        <description>Inventory at Alternate Location.</description>
        <inlineHelpText>Inventory count at alternate location.</inlineHelpText>
        <label>Alternate Inventory Balance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Location__c</fullName>
        <description>Location of additional inventory</description>
        <inlineHelpText>Location of additional inventory</inlineHelpText>
        <label>Alternate Location</label>
        <picklist>
            <picklistValues>
                <fullName>Forest Digital Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Direct Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticket</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Channel associated with premium.</description>
        <inlineHelpText>Channel associated with premium</inlineHelpText>
        <label>Channel</label>
        <picklist>
            <controllingField>Station__c</controllingField>
            <picklistValues>
                <fullName>89.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Club__c</fullName>
        <label>Club</label>
        <picklist>
            <picklistValues>
                <fullName>Arts &amp; Drama Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celtic &amp; Folk Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classical Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Travel Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jazz Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids &amp; Family Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts &amp; Culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Wine</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FMV__c</fullName>
        <label>FMV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forest_Direct_Plus_Number_c__c</fullName>
        <description>Forest Direct Plus Product Number</description>
        <inlineHelpText>Item code needed for placing order at Forest Direct Plus warehouse.</inlineHelpText>
        <label>Forest Direct Plus Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISBN__c</fullName>
        <label>ISBN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Balance__c</fullName>
        <label>Inventory Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Location__c</fullName>
        <description>Location of Warehouse</description>
        <inlineHelpText>Warehouse location of items.</inlineHelpText>
        <label>Inventory Location</label>
        <picklist>
            <picklistValues>
                <fullName>Forest Digital Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Direct Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticket</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Cost__c</fullName>
        <description>Estimated cost to the Station.</description>
        <inlineHelpText>Estimated cost to the Station.</inlineHelpText>
        <label>Item Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Vendor_Data__c</fullName>
        <description>Other Vendor to add to pick list</description>
        <inlineHelpText>Enter data on vendors not in Vendor field.</inlineHelpText>
        <label>Other Vendor Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Premium_Category__c</fullName>
        <label>Premium Category</label>
        <picklist>
            <controllingField>Family</controllingField>
            <picklistValues>
                <fullName>Adoption Program (e.g., Adopt-a-Whale)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cassette Recording</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD-ROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combination Gift Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compact Disc Recording</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hats and Caps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luggage other than station generics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make Good Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Effort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tickets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transcript</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transmedia Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-Shirt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Chair</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualifying_Gift_Kind__c</fullName>
        <label>Qualifying Gift Kind</label>
        <picklist>
            <picklistValues>
                <fullName>One Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustaining Gift</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Qualifying_Payment_Method__c</fullName>
        <label>Qualifying Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Funds Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Deduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Giving</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>WGBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UPC__c</fullName>
        <label>UPC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Minimum Donation Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Premium_Benefit__c</fullName>
        <inlineHelpText>Code used to order premiums with production vendor.</inlineHelpText>
        <label>Vendor Premium/Benefit #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>Name of product vendor</description>
        <inlineHelpText>Name of product vendor (not warehouse).</inlineHelpText>
        <label>Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Abbott Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allegro Corporation (Music Design)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>America’s Test Kitchen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arbor Day Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkivmusic.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avalon Multimedia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Door Productions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bob Ross Co.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bob Swerer Productions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Symphony Orchestra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compass Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detroit Public Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Freeway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Row c/o Rashford and Kruse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Droll Yankees Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle Rock Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eton Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exercise To Heal, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Incentives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaither Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSI Commerce / PBS Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harmonia Mundi USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Houston Enterprises, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J&amp;R Adventures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Wiley &amp; Sons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kindred Spirits of PE.I.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland Public Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MindWorks Press / Amen Clinics, Inc.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>no_of_items__c</fullName>
        <label># of Items</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllPackages</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Vendor__c</columns>
        <columns>Vendor_Premium_Benefit__c</columns>
        <columns>Inventory_Balance__c</columns>
        <columns>Inventory_Location__c</columns>
        <columns>Alternate_Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Packages</label>
    </listViews>
    <listViews>
        <fullName>All_Active_WCAI_Premiums</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Premium_Category__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>End_Date__c</columns>
        <columns>FMV__c</columns>
        <columns>Inventory_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Premium</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Station__c</field>
            <operation>equals</operation>
            <value>WCAI</value>
        </filters>
        <label>All Active WCAI Premiums</label>
    </listViews>
    <listViews>
        <fullName>All_Active_WGBH_Premiums</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Premium_Category__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>End_Date__c</columns>
        <columns>FMV__c</columns>
        <columns>Inventory_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Membership</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Station__c</field>
            <operation>equals</operation>
            <value>WCAI</value>
        </filters>
        <label>All Active WGBH Premiums</label>
    </listViews>
    <listViews>
        <fullName>All_Active_WGBY_Premiums</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Premium_Category__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>End_Date__c</columns>
        <columns>FMV__c</columns>
        <columns>Inventory_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Premium</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Station__c</field>
            <operation>equals</operation>
            <value>WGBY</value>
        </filters>
        <label>All Active WGBY Premiums</label>
    </listViews>
    <recordTypes>
        <fullName>Item</fullName>
        <active>true</active>
        <label>Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Package</fullName>
        <active>true</active>
        <label>Package</label>
    </recordTypes>
</CustomObject>